css/styles.css
body {
    font-family: 'Segoe UI',SegoeUI,'Segoe WP',Tahoma,Arial,sans-serif;
    font-size: 16px;
    line-height: 1.4rem;
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

img, video {
  width: 100%    !important;
  height: auto   !important;
}

@font-face {
	font-family: proxima-sb;
	src: url(https://applitools.com/fonts/proximanova/ProximaNova-Sbold-webfont.eot);
	src: url(https://applitools.com/fonts/proximanova/ProximaNova-Sbold-webfont.eot?#iefix) format("embedded-opentype"), url(https://applitools.com/fonts/proximanova/ProximaNova-Sbold-webfont.svg#proxima-sb) format("svg"), url(https://applitools.com/fonts/proximanova/ProximaNova-Sbold-webfont.woff) format("woff"), url(https://applitools.com/fonts/proximanova/ProximaNova-Sbold-webfont.ttf) format("truetype");
	font-weight: 400;
	font-style: normal
}

@font-face {
	font-family: proxima-rg;
	src: url(https://applitools.com/fonts/proximanova/ProximaNova-Reg-webfont.eot);
	src: url(https://applitools.com/fonts/proximanova/ProximaNova-Reg-webfont.eot?#iefix) format("embedded-opentype"), url(https://applitools.com/fonts/proximanova/ProximaNova-Reg-webfont.svg#proxima-rg) format("svg"), url(https://applitools.com/fonts/proximanova/ProximaNova-Reg-webfont.woff) format("woff"), url(https://applitools.com/fonts/proximanova/ProximaNova-Reg-webfont.ttf) format("truetype");
	font-weight: 400;
	font-style: normal
}

@font-face {
	font-family: Merriweather-Bold;
	src: url(https://applitools.com/fonts/merriweather/hinted-Merriweather-Bold.eot);
	src: url(https://applitools.com/fonts/merriweather/hinted-Merriweather-Bold.eot?#iefix) format("embedded-opentype"), url(https://applitools.com/fonts/merriweather/hinted-Merriweather-Bold.woff2) format("woff2"), url(https://applitools.com/fonts/merriweather/hinted-Merriweather-Bold.woff) format("woff"), url(https://applitools.com/fonts/merriweather/hinted-Merriweather-Bold.ttf) format("truetype"), url(https://applitools.com/fonts/merriweather/hinted-Merriweather-Bold.svg#Merriweather-Bold) format("svg");
	font-weight: 400;
	font-style: normal
}

p, h2, h3, h4 {
    margin: 0;
    padding: 0;
}

h1, h2, h3, h4, h5 {
    font-family: Merriweather-Bold;
    font-weight: 400;
}

h1, h2 {
    font-weight: 600;
}

p {
    font-family: proxima-rg;
    font-size: 1rem;
    color: #4e5a63;
    letter-spacing: -.09px;
    line-height: 1.5rem;
}

h1 {
    font-size: 2.5rem;
    line-height: 2.3125rem;
}

h2 {
    color: #005384;
    font-size: 2.1875rem;
    line-height: 2rem;
}

h3 {
    color: #005384;
    font-size: 1.875rem;
    line-height: 1.6875rem;
}

h4 {
    color: #005384;
    font-size: 1.5125rem;
    line-height: 1.4375rem;
    letter-spacing: -.05px;
}

h3.highlight {
    color: #01B8AC;
    font-weight: 600;
}

a {
    font-family: proxima-sb;
    font-size: 0.8125rem;
    color: #01B8AC;
    letter-spacing: 2.17px;
}

a:hover {
    color: #005384;
    text-decoration: none;
}

.icon {
    width: 80px;
    height: 80px;
    text-align: center;
    border: 1px solid rgba(78,90,99,.25);
    display: inline-block;
    border-radius: 40px;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

/* .icon:hover {
    background: #61D2B4;
} */

.icon i {
    font-size: 2.5rem;
    line-height: 5rem;
    color: rgba(60, 115, 154, 0.9);
}

/* .icon:hover i {
    color: #fff;
} */

/* COMMON CLASSES */
.primary-text {
    color: #01B8AC;
}

.primary-background {
    background: #01B8AC;
}

/* MAIN HEADER */
/* #main-header h1 {
    font-size: 2.3rem;
    font-weight: 600;
    line-height: 3.5rem;
} */

#main-header p.secondary-text {
    font-size: 2rem;
    line-height: 1.75rem;
    color: #005384;
}

#main-header a.grab-license {
    display: inline-block;
    background: #005384;
    color: #fff;
    font-size: 0.8rem;
}

#main-header ul {
    list-style: none;
}

#main-header li {
    display: inline;
    padding-right: 1.5rem;
}

#main-header li a {
    text-transform: capitalize;
    font-size: 0.85rem;
}

/* FEATURES */
#features-content:nth-child(even) {
    background: #F1F0EF;
}

.vendor-icon {
    display: inline-block;
    background: url(icons/vendors_sprite.png) no-repeat;
}

.vendor-icon.vendor-salesforce-color {
    background: url(icons/salesforce-logo.svg) no-repeat;
    background-size: contain;
    width: 88px;
    height: 63px;
}

.vendor-icon.vendor-mastercard-color {
    background: url(icons/mastercard-logo.svg) no-repeat;
    background-size: contain;
    width: 80px;
    height: 64px;
}

.vendor-icon.vendor-sap-color {
    background: url(icons/sap-logo.svg) no-repeat;
    background-size: contain;
    width: 79px;
    height: 39px;
}

.vendor-icon.vendor-sony-color {
    background: url(icons/sony-logo.svg) no-repeat;
    background-size: contain;
    width: 117px;
    height: 21px;
}

.vendor-icon.vendor-intuit-color {
    background: url(icons/intuit-logo.svg) no-repeat;
    background-size: contain;
    width: 94px;
    height: 28px;
}

.vendor-icon.vendor-dowjones-color {
    background: url(icons/dow-jones-logo.svg) no-repeat;
    background-size: contain;
    width: 54px;
    height: 54px;
}

.vendor-icon.vendor-adidas-color {
    background: url(icons/adidas-logo.svg) no-repeat;
    background-size: contain;
    width: 81px;
    height: 54px;
}

/* FOOTER */
#main-footer {
    background: #333;
    color: #888;
    font-size: 1em;
    padding: 0;
}

#main-footer ul {
    list-style: none;
}

#main-footer li {
    display: inline;
    padding-right: 10px;
}

#main-footer .fa {
    font-size: 30px;
    cursor: pointer;
}

#main-footer .fa:hover {
    color: #fff;
}

